Corrige bug de overflow

--- a/css/contato.css
+++ b/css/contato.css
@@ -132,3 +132,7 @@ textarea:focus {
     grid-template-columns: 1fr 1fr;
   }
 }
+
+@media screen and (min-width: 1400px) {
+  
+}
