--- a/css/global.css
+++ b/css/global.css
@@ -24,7 +24,6 @@ body {
   font-family: "Inter", sans-serif;
   color: var(--text-color);
   line-height: 1.6;
-  min-height: 100vmax;
 }
 
 h1,
